Fix mobile text overlapping

--- a/client/src/pages/Story/story.scss
+++ b/client/src/pages/Story/story.scss
@@ -7,6 +7,10 @@
     h1 {
       margin-left: -2rem !important;
     }
+
+    p {
+      margin-top: 2.5rem !important;
+    }
   }
 }
 
